--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "cheerio": "^0.22.0",
     "coffee-script": "^1.10.0",
     "fs": "0.0.1-security",
+    "joplin-turndown-plugin-gfm": "^1.0.12",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
     "path": "^0.12.7",
     "rimraf": "^2.5.4",
-    "sync-exec": "^0.6.2"
+    "sync-exec": "^0.6.2",
+    "turndown": "^7.1.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
