--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "path": "^0.12.7",
     "rimraf": "^2.5.4",
     "sync-exec": "^0.6.2",
-    "turndown": "^7.1.1"
+    "turndown": "^7.1.1",
+    "turndown-plugin-confluence-to-gfm": "^0.5.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
